jswt-semantics/src/snapshots/jswt_semantics__globals__test__global_resolver_resolves_function_bindings.snap
---
source: jswt-semantics/src/globals.rs
expression: resolver

---
GlobalResolver {
    bindings_table: BindingsTable {
        bindings: {},
    },
    symbol_table: SymbolTable {
        table: [
            {
                "test": Function(
                    FunctionSignature {
                        params: [
                            Binding(
                                "i32",
                            ),
                            Binding(
                                "i32",
                            ),
                        ],
                        returns: Binding(
                            "void",
                        ),
                    },
                ),
                "test2": Function(
                    FunctionSignature {
                        params: [],
                        returns: Binding(
                            "Array",
                        ),
                    },
                ),
            },
        ],
    },
    bindings_context: [],
    errors: [],
}
